--- a/ToDo.txt
+++ b/ToDo.txt
@@ -7,25 +7,23 @@ Major Changes:
     -   Behaviour also applies to `typemin` and `typemax` as well
 2.  (breaking) `NoDims()` removed, make sure dimension objects have default arguments of zero
 3.  (breaking) `quantity` removed, use Quantity instead
-4.  (breaking) `UnitfulCallable` removed in favor of Quantity(f::Function, u::UnitTransform)
+4.  (breaking) `UnitfulCallable` removed in favor of Quantity(f::Function, u::UnitMap)
 5.  (breaking) `AbstractUnitTransform` is renamed to `AbstractUnitConverter` (AffineTrnasform is now AffineConverter)
-6.  (breaking) promotion rules convert to quantities
+6.  Added more promotion rules to convert to quantities
 7.  FixRat32 is now exported
 
 
 Current Tasks:
-1.  Add support to MirrorDims() to allow zero(Quantity{T,D}) + Quantity{T,D}(...) = Quantity{T,D}(...)
-    -   Renaming for clarity: AbstractUnitTransform => AbstractUnitConverter, AffineTransform => AffineConverter
-    -   Change promotion rules so that Quantity{T<:ARITHMETICS} + ARITHMETICS promotes to Quantity{T} using Quantity(x, D())
+1.  Build out "unit mapping" objects 
+    -   UnitOrDim{D} = Union{AbstractUnits{D}, D} where D<:AbstractDimensions
+    -   UnitMap{U<:UnitOrDim, V<:AbstractVector{U}}(input::Vector{U}, output::Vector{U}) <: UnitLike (add "Pair" constructors)
+    -   RUnitMap{U<:UnitOrDim, V::AbstractVector{U}}(input::V, scale::U=U()) <: UnitLike #Repeatable/Recursive unit map
+    -   UnitMaps{U} = Union{UnitMap{U}, RUnitMap{U}}
+    -   QuantLinMap{M<:AbstractMatrix, U<:UnitMap{D<:AbstractDimension}} <: AbstractMatrix{Quantity{D}} #Quantity matrix with linear mapping properties
+    -   Deprecate UnitfulCallable and replace with Quantity{Function, UnitMap{U}}
+    -   QuantLinMap adjoint inverts units but matrix adjoints don't (think Eigenvectors vs Covariance)
 
-2.  Build out "unit mapping" objects 
-    -   UnitMap{U<:Union{AbstractUnits, AbstractDimensions}, input::Vector, output::Vector} <: UnitLike (add "Pair" constructors)
-    -   ScaleUnitMap{U<:Union{AbstractUnits, AbstractDimensions}, input::Vector, scale::U} <: UnitLike
-    -   QuantTransform{M<:AbstractMatrix, U<:UnitMap} <: AbstractMatrix{Quantity{D}}
-    -   Deprecate UnitfulCallable and replace with Quantity{Function, UnitMap}
-    -   QuantTransform adjoint inverts units but matrix adjoints don't (think Eigenvectors)
-
-X.  Consider a special object QuantTransform(scale::AbstractArray, units::UnitMap)<:AbstractArray{<:Quantity}        
+    Notes on above:      
     -   This is a KILLER FEATURE because Unitful CANT DO THIS with mixed dimensions, and DynamicQuantities can't do this at all
     -   All CONSISTENT quantity transforms mQ can be broken down into mQ.scale, mQ.units
         -   For a matrix multiplication with a column vector to work, the matrix must be DIMENSINALLY CONSISTENT and COMPATIBLE with the vector
