--- a/ToDo.txt
+++ b/ToDo.txt
@@ -11,6 +11,8 @@ Major Changes:
 5.  (breaking) `AbstractUnitTransform` is renamed to `AbstractUnitConverter` (AffineTrnasform is now AffineConverter)
 6.  Added more promotion rules to convert to quantities
 7.  FixRat32 is now exported
+8.  Add "dstrip" as shorthand for "ustrip_base"
+9.  Add "dconvert" to convert to the dimensions of the unit
 
 
 Current Tasks:
@@ -24,34 +26,29 @@ Current Tasks:
     -   QuantLinMap adjoint inverts units but matrix adjoints don't (think Eigenvectors vs Covariance)
 
     Notes on above:      
-    -   This is a KILLER FEATURE because Unitful CANT DO THIS with mixed dimensions, and DynamicQuantities can't do this at all
-    -   All CONSISTENT quantity transforms mQ can be broken down into mQ.scale, mQ.units
-        -   For a matrix multiplication with a column vector to work, the matrix must be DIMENSINALLY CONSISTENT and COMPATIBLE with the vector
-            -   Consider a type QuantTransorm{scale::T, units::AbstractUnitMap}
-        -   Multiplication of a vector quantity "v" with a quantity transform mQ can be expressed as
-            -   mU = mQ.units::UnitMap{colfac::AbstractVector{Dimensions{T}}, rowfac::AbstractVector{Dimensions{T}}} 
-            -   Matrix(mU::UnitMap) = mU.colfac .* mU.rowfac'
-            -   mQ*v = mU.colfac.*(mQ.scale).*(mU.rowfac')*v
-            -   scale  = ustrip_base.(mQ)
-            -   colfac = dimension.(mQ[:,begin])
-            -   rowfac = dimension.(mQ[ii,:])/colfac[ii]
-                -   Result for rowfac must be the same for all ii
-        -   UnitMap mU can be easily inverted
-            -   inv(mU) = UnitMap(colfac=inv.(mU.rowfac), rowfac=inv.(mU.colfac))
-        -   L-Divide can be done in stages (scalars first, and then units)
-            -   y = fill(0.0*u"", size(mQ,1), size(x,2))
-            -   y .= mQ.scale\ustrip_base.(x)
-            -   y .*= inv(mQ.units)*x
-    -   All SELF-CONSISTENT unit transforms ScalarUnitMap can be factorized as mU = uscale.*(colfac.*inv.(colfac'))
-        -   ScalarUnitMap{scale::Dimensions{T}, colfac::AbstractVector{Dimensions{T}}} 
-            -   The term (colfac.*inv.(colfac')) is idempotent for vectors with compatible dimensions
-        -   ScalarUnitMap can have many different operations
-            -   Matrix Power -> mU^x = ScalarUnitMap(uscale=mU.scale^x, colfac=mU.colfac)
-            -   Transpose -> transpose(mU) = ScalarUnitMap(uscale=mU.scale, colfac=inv.(mU.colfac))
-            -   Matrix EXP -> exp(mU) = mU if mU.scale == u""
-            -   Eigendecomposition -> eigenvalue .= mU.scale, eigenvectors .= mU.colfac.*inv.(colfac')
-            -   Cholesky decomposition -> L = ScalarUnitMap(sqrt(mU.scale), mU.colfac), R = ScalarUnitMap(sqrt(mU.scale), inv.(mU.colfac))
-
+    -   Matrix multiplication is ONLY valid with QuantLinMap and will ALWAYS produce a QuantLinMap
+        -   Multiplication should convert both AbstractMatrix{Quantity} to QuantLinMap
+        -   This may result in more allocations, but is more reliable in pointing out errors
+        -   It is recommendable to only store matrices as QuantLinMap if linear algebra is intended
+    -   Transpose of a unit transform is different form an inverse
+        -   y = A*x produces units of y
+        -   inv(A)*y produces units of x
+            -   Thise meanse that output units ut2 = UnitMap(u_out=ut1.u_in, u_in=ut1.u_out)
+        -   x'A' = y' should hold true
+            -   This means that output units ut2 = UnitMap(u_out=inv.(ut1.u_in), u_in=inv.(ut1.u_out))
+    -   Support basic matrix operations out-of-the-box (inv, \, /, exp, ^)
+        -   For later versions, add a LinearAlgebra extension for factorizations like cholesky and eigen
+    -   There are two kinds of special unit factorizations: Recursive and Symmetric
+        -   `A` is recursive if A*A*...*A*x is possible
+            -   This happens when u_out = s*u_in
+        -   `A` is symmetric if x'*A*x is possible
+            -   This happens when u_out = s*inv.(u_in)
+        -   cholesky requires A to be symmetric
+        -   matrix exponentials require A to be recursive
+        -   eigendecomposition works on both because inv(E) == E'
+            -   The problem is inv(E) != E' for units
+            -   If 'A' is symmetric, then you want to use "E'" to transform to "inverse space"
+            -   If 'A' is recursive, then you want to use "inv(E)" to transform back
 
 Backlog:
 1.  Consider support for Unitful-like static-dimension quantities (SQuantity?) MAJOR FEATURE!!!
