--- a/ToDo.txt
+++ b/ToDo.txt
@@ -8,7 +8,7 @@ Major Changes:
 2.  (breaking) `NoDims()` removed, make sure dimension objects have default arguments of zero
 3.  (breaking) `quantity` removed, use Quantity instead
 4.  (breaking) `UnitfulCallable` removed in favor of QuantMapping(f::Function, u::UnitMap)
-5.  (breaking) `AbstractUnitTransform` is renamed to `AbstractUnitConverter` (AffineTrnasform is now AffineConverter)
+5.  (breaking) `AbstractUnitTransform` is renamed to `AbstractUnitTransform` (AffineTrnasform is now AffineTransform)
 6.  Added more promotion rules to convert to quantities
 7.  FixRat32 is now exported
 8.  Added "dstrip" as shorthand for "ustrip_base"
@@ -16,10 +16,15 @@ Major Changes:
 
 
 Current Tasks:
+0.  Test out the new StaticUnit/StaticDims performance
+    -   Use an iterative Peng-Robinson Volume calculation
+        -   Type-stable Unitful vs DynamicQuantities vs StaticUnit (NamedTuple)
+        -   Type-unstable Unitful vs DynamicQuantities vs StaticUnit-promote (FieldVector)
+
 1.  Build out unit mapping functions for +,-,*,/,\,^,exp, (matrix trigs)
-        -   This consists of building shortcuts for UnitMap types
-        -   Output should be "UnitMap" the most specific type possible
-        -   Make sure operations convert to QuantLinMap and output that type
+    -   This consists of building shortcuts for UnitMap types
+    -   Output should be "UnitMap" the most specific type possible
+    -   Make sure operations convert to QuantLinMap and output that type
 
     Notes on above:      
     -   Matrix multiplication is ONLY valid with QuantLinMap and will ALWAYS produce a QuantLinMap
@@ -62,13 +67,20 @@ Backlog:
         -   Multiplying static units eagerly converts to Dimensions (for performance reasons)
     -   Promotion of quantities will revert to regular dynamic quantities
         -   This looks like it can be handled at the "with_ubase" interface level
-2.  Build out documentation and a docs badge
+2.  Revamp AffineUnits to have an AffineTransform as a field (todims) instead of "scale" and "offset"
+    -   This increases generality to extend to logarithmic dimensions
+    -   Any unit will now have fields "dims::AbstractDimensions, todims::AbstractTransform, symbol::Symbol"
+    -   Build an AffineTransform algebra
+        -   trans = trans1 ∘ trans2 #Chain transformations together, produces an AffineTransform if arguments are Affine
+        -   converter = trans1 ∘ inv(trans2) #This is what is produced when converting from trans1 to trans2 (also Affine)
+    -   Build a NoTransform object (automatically produced by AbstractDimensions when called by "todims")
+3.  Build out documentation and a docs badge
     -   Include all-stops-out tutorial on defining a new dimension "RadDims"
     -   Add angle to the dimension list
     -   Create a new unit registry with that dimension 
     -   Re-tool sin, cos, tan rules on this particular dimension
-3.  Add LinearAlgebra extensions for QuantLinMap
-4.  Add "unit_info(u::Union{Dimension, AbstractUnit{Dimension}})" 
+4.  Add LinearAlgebra extensions for QuantLinMap
+5.  Add "unit_info(u::Union{Dimension, AbstractUnit{Dimension}})" 
     -   Maps dimensions to a meaning (like Force or Inductance) and lists other units of that dimension
     -   This can be done without documentation 
         -   Use Dict{Dimension,String} to find dimension "meaning" (determine this by unique dimensions)
@@ -86,10 +98,10 @@ end #(where D is a dimenison)
 StaticDim(D) = StaticDim{D}()
 StaticDim{D}(d::AbstractDimension) = (D == d) ? StaticDim{D} : throw(ArgumentError("Dimesion $(d) must be equal to $(D)"))
 
-struct StaticUnit{D, C<:AbstractUnitConverter} #(where D is a dimenison)
+struct StaticUnit{D, C<:AbstractUnitTransform} #(where D is a dimenison)
     todims :: C
     symbol :: Symbol
-    function StaticUnit{D}(conv::C, symb=DEFAULT_USYMBOL::Symbol) where {D, C<:AbstractUnitConverter}
+    function StaticUnit{D}(conv::C, symb=DEFAULT_USYMBOL::Symbol) where {D, C<:AbstractUnitTransform}
         return (D isa AbstractDimension) ? new{D}(conv, symb) : error("Type parameter must be a dimension")
     end
 end
@@ -112,11 +124,11 @@ end
 SQuantity(x::Any, u::AbstractDimensions) = SQuantity{typeof(x), u}(x)
 
 #Static unit that contains a dimension parameter and the transform to get the unit to said dimension
-struct StaticUnit{D, T<:AbstractUnitConverter}
+struct StaticUnit{D, T<:AbstractUnitTransform}
     converter :: T
     symbol :: Symbol
 end
-StaticUnit(u::AffineUnits{D}) where D<:AbstractDimension = StaticUnit{dimension(u), AffineConverter}(uconvert(dimension(u), u))
+StaticUnit(u::AffineUnits{D}) where D<:AbstractDimension = StaticUnit{dimension(u), AffineTransform}(uconvert(dimension(u), u))
 
 #Multiplication with static units becomes easy thanks to the elegance of unit transforms
 Base.*(x::T, u::StaticUnit{D}) where {T<:ARITHMETICS, D<:AbstractDimensions} = SQuantity{T,D}(u.transform(x))
